--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -192,14 +192,14 @@
                       border:1px solid rgba(0, 0, 0, 0.1);
                       ">
                                <div class = "col-sm-5">
-        <input class = "form-control" type= "text" name= "start_time" value="7:00"/>
+        <input class = "form-control" type= "text" name= "start_time" value="{{start_time}}"/>
                   {% comment %} {{availiable.startime}} {% endcomment %}
                               </div>
                                <div class = "col-sm-1">
                               -
                               </div>
                                <div class = "col-sm-5">
-      <input class = "form-control" type= "text" name= "end_time" value="7:00"/>
+      <input class = "form-control" type= "text" name= "end_time" value="{{end_time}}"/>
 
                            {% comment %} {{availiable.endtime}} {% endcomment %}
 
