--- a/counsellingApp/templates/app/admin.html
+++ b/counsellingApp/templates/app/admin.html
@@ -29,7 +29,7 @@
         {% endif %}
 
         <div class="dropdown" id="profiletext">
-          <p class="dropbtn" style="font-size: 20px">
+          <p class="dropbtn" style="font-size: 20px;color:white;">
             {{object.user_id}}
 
             <i class="fas fa-caret-down"></i>
