--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -2,7 +2,7 @@
     background-color: white;
 
     height: 100%;
-    font-family: Montserrat;
+font-family: "Open Sans", sans-serif;
     overflow: hidden;
 
 }
@@ -127,7 +127,7 @@
    
     {% comment %} width:85%; {% endcomment %}
     height:100%;
-    font-family: Montserrat;
+font-family: "Open Sans", sans-serif;
     display:  block;
    
     overflow-y: scroll;
@@ -146,7 +146,7 @@
        {% comment %} width:85%; {% endcomment %}
     height:100%;
 
-    font-family: Montserrat;
+font-family: "Open Sans", sans-serif;
     display:block;
     overflow-y: scroll;
     animation-name: example;
@@ -162,7 +162,7 @@
     height:100%;
 
     
-    font-family: Montserrat;
+font-family: "Open Sans", sans-serif;
     display:block;
     overflow-y: scroll;
     overflow-x:hidden;
@@ -547,7 +547,7 @@ section {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Ubuntu', sans-serif;
+font-family: "Open Sans", sans-serif;
 }
 
 #out{
@@ -720,31 +720,22 @@ display: block;
 
 
 #elementID6 {
-    opacity: 0.3;
+   color:white;
     float: left;
-    
     width: 2%;
-
-
     transition: all 0.3s ease;
+    
 }
 
 #elementID6:hover {
     color: blue;
     animation: mymove 5s infinite;
     opacity: 0.7;
-
-
-
-
 }
 
 #elementID6.active {
-
-
     color: blue;
     opacity: 0.7;
-
     -web-kit-transition: :100ms;
 }
 
@@ -1966,7 +1957,7 @@ body {
 #panel {
     margin: 0;
     font-weight: bold;
-    font-family: Montserrat;
+font-family: "Open Sans", sans-serif;
     color:rgba(255,255,255,0.9);
 }
 
@@ -2006,7 +1997,7 @@ body {
 
 #realtext {
     margin: 0%;
-    font-family: Montserrat;
+font-family: "Open Sans", sans-serif;
     font-weight: bold;
     font-size: 25px;
     display: flex;
@@ -2024,7 +2015,7 @@ body {
 }
 
 #bookings {
-    font-family: Montserrat;
+font-family: "Open Sans", sans-serif;
     font-weight: bold;
     display: flex;
     justify-content: center;
@@ -2238,7 +2229,7 @@ body {
     padding: 1%;
      width:100%;
     height:100%;
-    font-family: Montserrat;
+font-family: "Open Sans", sans-serif;
     display:block;
     overflow: hidden;
     overflow-y:scroll;
