--- a/counsellingApp/templates/app/header.html
+++ b/counsellingApp/templates/app/header.html
@@ -13,6 +13,7 @@
 <script>{% include 'app/assets/js/super.js'%}</script>
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="icon" href="{% static "media/University.png" %}">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
   <link
