--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -150,6 +150,8 @@ font-family: "Open Sans", sans-serif;
                 <label for="usr"> Slots </label>  
                     </div>
                     </div>
+                     
+                 
             <div class="col-sm-3">
             <div class="form-group">
              {{availiable.hours}}
@@ -164,7 +166,14 @@ font-family: "Open Sans", sans-serif;
 
                     </div>
                     </div>
-                   <div class="col-sm-3">
+                    <div class="col-sm-3">
+                <div class="form-group">
+                  {{availiable.breaks}}
+                <label for="usr"> Break </label>
+
+                    </div>
+                    </div>
+                   <div class="col-sm-3" style="padding-bottom:2%;">
      <button type="submit" class="btn btn-danger">
        <i class="fa fa-clock"></i> 
        Generate time</button>
