--- a/counsellingApp/templates/app/admin.html
+++ b/counsellingApp/templates/app/admin.html
@@ -138,11 +138,11 @@
               </thead>
               <tbody>
                 <tr>
-                  <td class="align-middle">09:00am</td>
+                  <td class="align-middle">#</td>
                   <td>
                     <span
                       class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13"
-                      >Dance</span
+                      >#</span
                     >
                     <div class="margin-10px-top font-size14">9:00-10:00</div>
                     <div class="font-size13 text-light-gray">Ivana Wong</div>
