--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -56,9 +56,8 @@ font-family: "Open Sans", sans-serif;
 
 
 #section3 {
-    background : url("https://www.teahub.io/photos/full/90-905705_free-geometry-high-quality-background-id-high-resolution.jpg");   
-    background-size: cover;
-    background-repeat: no-repeat;
+    background : url("	https://www.ug.edu.gh/sites/all/themes/ugmain/images/great-hall-artwork.png");   
+   
     height: 100%;
     width: 83.3%;
     float: right;
