--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -266,7 +266,7 @@ transform: scale(1.1, 1.1);
       <input class = "form-control" type= "text" name= "end_time" value="{{u}}"/>
                           </div> 
                               <div class = "col-sm-3">
- <input  type= "checkbox" name= "checkbox"/> Not available
+                  <input  type= "checkbox" name= "checkbox" value="yes"/> I'm available
                               </div>
                            </div>
                            
