--- a/bookingApp/templates/contact.html
+++ b/bookingApp/templates/contact.html
@@ -1,11 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %}{% load static %}
 {% block content %}
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_5.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2" style="background-image: url({% static 'images/bg_5.jpg'%});" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-end justify-content-center">
           <div class="col-md-9 ftco-animate mb-5 text-center">
-          	<p class="breadcrumbs mb-0"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Contact Us <i class="fa fa-chevron-right"></i></span></p>
+          	<p class="breadcrumbs mb-0"><span class="mr-2"><a href="{% url 'bookingUrls:indexPage'%}">Home <i class="fa fa-chevron-right"></i></a></span> <span>Contact Us <i class="fa fa-chevron-right"></i></span></p>
             <h1 class="mb-0 bread">Contact Us</h1>
           </div>
         </div>
@@ -24,7 +24,7 @@
 				        			<span class="fa fa-map-marker"></span>
 				        		</div>
 				        		<div class="text">
-					            <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+					            <p><span>Address:</span> Legon Boundary, Accra</p>
 					          </div>
 				          </div>
 								</div>
@@ -34,7 +34,7 @@
 				        			<span class="fa fa-phone"></span>
 				        		</div>
 				        		<div class="text">
-					            <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+					            <p><span>Phone:</span> <a href="tel:// 030 221 3850"> 030 221 3850</a></p>
 					          </div>
 				          </div>
 								</div>
@@ -64,6 +64,7 @@
 									<div class="contact-wrap w-100 p-md-5 p-4">
 										<h3 class="mb-4">Contact Us</h3>
 										<form method="POST" id="contactForm" name="contactForm" class="contactForm">
+											{% csrf_token %}
 											<div class="row">
 												<div class="col-md-6">
 													<div class="form-group">
@@ -100,7 +101,8 @@
 									</div>
 								</div>
 								<div class="col-md-5 order-md-first d-flex align-items-stretch">
-									<div id="map" class="map"></div>
+									<div >
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3970.438958024815!2d-0.19249728585226455!3d5.649457634274759!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf9c7eebc9a3d9%3A0xbbe20b36f78ee9dc!2sCareers%20And%20Counselling%20Centre!5e0!3m2!1sen!2sgh!4v1654699848087!5m2!1sen!2sgh" width="450px" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>									</div>
 								</div>
 							</div>
 						</div>
