--- a/bookingApp/templates/index.html
+++ b/bookingApp/templates/index.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %}{% load static %}
 {% block content %}
-    <div class="hero-wrap" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+    <div class="hero-wrap" style="background-image: url({% static 'images/bg_1.jpg'%});" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-center">
@@ -123,7 +123,7 @@
     <section class="ftco-section ftco-no-pb ftco-no-pt">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6 img img-3 d-flex justify-content-center align-items-center" style="background-image: url(images/about-1.jpg);">
+					<div class="col-md-6 img img-3 d-flex justify-content-center align-items-center" style="background-image: url({% static 'images/about-1.jpg'%});">
 					</div>
 					<div class="col-md-6 wrap-about px-md-5 ftco-animate py-5 bg-light">
 	          <div class="heading-section">
@@ -181,32 +181,32 @@
 					<div class="col-md-8">
 						<div class="tab-content">
 						  <div class="tab-pane container p-0 active" id="services-1">
-						  	<div class="img" style="background-image: url(images/services-1.jpg);"></div>
+						  	<div class="img" style="background-image: url({% static 'images/services-1.jpg'%});"></div>
 						  	<h3><a href="#">Academic Problem</a></h3>
 						  	<p></p>
 						  </div>
 						  <div class="tab-pane container p-0 fade" id="services-2">
-						  	<div class="img" style="background-image: url(images/services-2.jpg);"></div>
+						  	<div class="img" style="background-image: url({% static 'images/services-2.jpg'%});"></div>
 						  	<h3><a href="#">Couples Counseling</a></h3>
 						  	<p></p>
 						  </div>
 						  <div class="tab-pane container p-0 fade" id="services-3">
-						  	<div class="img" style="background-image: url(images/services-3.jpg);"></div>
+						  	<div class="img" style="background-image: url({% static 'images/services-3.jpg'%});"></div>
 						  	<h3><a href="#">Depression Treatment</a></h3>
 						  	<p></p>
 						  </div>
 						  <div class="tab-pane container p-0 fade" id="services-4">
-						  	<div class="img" style="background-image: url(images/services-4.jpg);"></div>
+						  	<div class="img" style="background-image: url({% static 'images/services-4.jpg'%});"></div>
 						  	<h3><a href="#">Family Problems</a></h3>
 						  	<p></p>
 						  </div>
 						  <div class="tab-pane container p-0 fade" id="services-5">
-						  	<div class="img" style="background-image: url(images/services-5.jpg);"></div>
+						  	<div class="img" style="background-image: url({% static 'images/services-5.jpg'%});"></div>
 						  	<h3><a href="#">Personal Problem</a></h3>
 						  	<p></p>
 						  </div>
 						  <div class="tab-pane container p-0 fade" id="services-6">
-						  	<div class="img" style="background-image: url(images/services-6.jpg);"></div>
+						  	<div class="img" style="background-image: url({% static 'images/services-6.jpg'%});"></div>
 						  	<h3><a href="#">Business Problem</a></h3>
 						  	<p></p>
 						  </div>
@@ -236,7 +236,7 @@
                 <div class="text">
                     <p class="mb-4"></p>
                     <div class="d-flex align-items-center">
-                    <div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
+                    <div class="user-img" style="background-image: url({% static 'images/person_1.jpg'%})"></div>
                     	<div class="pl-3">
 		                    <p class="name">Roger Scott</p>
 		                    <span class="position">Marketing Manager</span>
@@ -311,7 +311,7 @@
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <div class="text text-center">
-              	<a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_1.jpg');">
+              	<a href="blog-single.html" class="block-20 img" style="background-image: url({% static 'images/image_1.jpg'%});">
 	              </a>
 	              <div class="meta text-center mb-2 d-flex align-items-center justify-content-center">
                 	<div>
