--- a/bookingApp/templates/contact.html
+++ b/bookingApp/templates/contact.html
@@ -24,7 +24,7 @@
 				        			<span class="fa fa-map-marker"></span>
 				        		</div>
 				        		<div class="text">
-					            <p><span>Address:</span> Legon Boundary, Accra</p>
+					            <a href ="https://goo.gl/maps/E8auw2x65vDJWuYr7"><span>Address:</span> Accra</a>
 					          </div>
 				          </div>
 								</div>
@@ -34,7 +34,7 @@
 				        			<span class="fa fa-phone"></span>
 				        		</div>
 				        		<div class="text">
-					            <p><span>Phone:</span> <a href="tel:// 030 221 3850"> 030 221 3850</a></p>
+					            <p><span>Phone:</span> <a href="tel:// 0204999221"> 0204999221</p>
 					          </div>
 				          </div>
 								</div>
